issue 14: use Integer.valueOf in delta comparison